Finition 3, this time it's personal

--- a/4 - Apprentissage supervisé/Ferati_Ganty_ISD_TP4.ipynb
+++ b/4 - Apprentissage supervisé/Ferati_Ganty_ISD_TP4.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 108,
    "id": "6f6c92f1",
    "metadata": {
     "pycharm": {
@@ -306,7 +306,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Données manquantes ?  False\n"
+      "Données manquantes ?  False\n",
+      "Données négatives ?  False\n"
      ]
     }
    ],
@@ -318,7 +319,7 @@
     "display(raw_data)\n",
     "\n",
     "print(\"Données manquantes ? \", (raw_data.isnull().values.any()))\n",
-    "print()\n"
+    "print(\"Données négatives ? \", (raw_data.values < 0).any())\n"
    ]
   },
   {
